log
Thu, May  1, 2025 11:03:34 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Thu, May  1, 2025 11:04:09 PM: 
 tests:  1|8
total_score: 0/70
b930a7e
Sat, May  3, 2025  5:03:05 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2347930
Sat, May  3, 2025  5:14:39 PM: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:52:26: warning: implicit declaration of function '_createTreeNode'; did you mean 'createTreeNode'? [-Wimplicit-function-declaration]
   52 |     TreeNode* new_node = _createTreeNode(key, value);
      |                          ^~~~~~~~~~~~~~~
      |                          createTreeNode
treemap.c:52:26: warning: initialization of 'TreeNode *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
treemap.c:54:16: warning: 'return' with a value, in function returning void [-Wreturn-type]
   54 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:59:16: warning: 'return' with a value, in function returning void [-Wreturn-type]
   59 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
C:/msys64/ucrt64/bin/../lib/gcc/x86_64-w64-mingw32/13.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\Ramon\AppData\Local\Temp\ccC7weWs.o: in function `insertTreeMap':
C:/Users/Ramon/Desktop/Lab4/lab-4-rboles-binarios-de-b-squeda-Raymon1213/test.c:52:(.text+0x162): undefined reference to `_createTreeNode'
collect2.exe: error: ld returned 1 exit status
4ada197
Sat, May  3, 2025  5:15:25 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:52:26: warning: implicit declaration of function '_createTreeNode'; did you mean 'createTreeNode'? [-Wimplicit-function-declaration]
   52 |     TreeNode* new_node = _createTreeNode(key, value);
      |                          ^~~~~~~~~~~~~~~
      |                          createTreeNode
treemap.c:52:26: warning: initialization of 'TreeNode *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
C:/msys64/ucrt64/bin/../lib/gcc/x86_64-w64-mingw32/13.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:\Users\Ramon\AppData\Local\Temp\ccUSBMA8.o: in function `insertTreeMap':
C:/Users/Ramon/Desktop/Lab4/lab-4-rboles-binarios-de-b-squeda-Raymon1213/test.c:52:(.text+0x162): undefined reference to `_createTreeNode'
collect2.exe: error: ld returned 1 exit status
d293336
Sat, May  3, 2025  5:16:02 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
96230aa
Sat, May  3, 2025  5:18:53 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
b712ef4
Sat, May  3, 2025  5:23:42 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  13|5
total_score: 25/70
ee26547
Sat, May  3, 2025  5:30:17 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
e4a025d
Sat, May  3, 2025  5:30:37 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
c932d9a
Sat, May  3, 2025  6:09:08 PM: 
 treemap.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
ddca859
Sat, May  3, 2025  6:13:30 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0a4bba7
Sat, May  3, 2025  6:14:02 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
1f1e387
Sat, May  3, 2025  6:36:26 PM: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
test.c: In function 'nextTreeMap':
test.c:503:5: warning: 'main' is normally a non-static function [-Wmain]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:608: warning: control reaches end of non-void function [-Wreturn-type]
test.c: At top level:
test.c:503:5: warning: 'main' defined but not used [-Wunused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
dd16d41
Sat, May  3, 2025  6:36:52 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  25|1
total_score: 60/70
893f119
Sat, May  3, 2025  6:42:41 PM: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
f108168
Sat, May  3, 2025  6:43:08 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
012f3b8
Sat, May  3, 2025  6:43:40 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b1d9a2c
Sat, May  3, 2025  6:45:48 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
00782c4
Sat, May  3, 2025  6:46:57 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
748c9a1
Sat, May  3, 2025  6:54:30 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
5bba4f5
Sat, May  3, 2025  6:55:02 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
7a5371c
Sat, May  3, 2025  6:55:17 PM: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  25|1
total_score: 60/70
6048fe1
Sat, May  3, 2025  6:56:31 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
a7c25d0
Sat, May  3, 2025  7:01:26 PM: 
 treemap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  28|1
total_score: 65/70
6f8a954
Sat, May  3, 2025  7:06:23 PM: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  26|1
total_score: 60/70
0e97527
Sat, May  3, 2025  7:07:01 PM: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
a00ff9c
Sat, May  3, 2025  7:08:37 PM: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  26|1
total_score: 60/70
2ed354b
Sat, May  3, 2025  7:10:05 PM: 
 treemap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
Compilation failed
test.c: In function 'upperBound':
test.c:503:5: warning: 'main' is normally a non-static function [-Wmain]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:608: warning: control reaches end of non-void function [-Wreturn-type]
test.c: At top level:
test.c:503:5: warning: 'main' defined but not used [-Wunused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
0c80ec0
Sat, May  3, 2025  7:10:31 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
505d655
Sat, May  3, 2025  7:13:22 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'upperBound':
treemap.c:184:30: warning: value computed is not used [-Wunused-value]
  184 |         else(ub_node != NULL && is_equal(tree,current->pair->key,key)){
      |                              ^~
treemap.c:184:71: error: expected ';' before '{' token
  184 |         else(ub_node != NULL && is_equal(tree,current->pair->key,key)){
      |                                                                       ^
      |                                                                       ;
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
b620039
Sat, May  3, 2025  7:13:56 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
f665058
Sat, May  3, 2025  7:16:03 PM: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
28219c8
Sat, May  3, 2025  7:18:16 PM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  29|0
total_score: 70/70
61b7433
Sat, May  3, 2025  8:01:41 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
d5cab4e
